--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 <body>
     <div id="desktop">
-        <div id="osMenuPannelContainer"></div>
+        <div id="windowsContainer">
+        </div>
+        <div id="osMenuPannelContainer">
+            <div class="userAccount">
+                <div class="userLogoContainer">
+                    <div class="userLogo"></div>
+                </div>
+                <div class="userName"><p>Leer0r</p></div>
+            </div>
+            <div class="searchBar"></div>
+            <div class="leftSubPannel"></div>
+            <div class="rightSubPannel"></div>
+            <div class="bottomSubPannel"></div>
+
+        </div>
     </div>
     <div id="navbar">
     </div>
