--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="styles/CSS/mainStyle.css">
     <script src="scripts/JS/debianOs.js" defer></script>
 </head>
+
 <body>
     <div id="desktop">
         <div id="windowsContainer">
@@ -17,11 +19,14 @@
                 <div class="userLogoContainer">
                     <div class="userLogo"></div>
                 </div>
-                <div class="userName"><p>Leer0r</p></div>
+                <div class="userName">
+                    <p>Leer0r</p>
+                </div>
             </div>
             <div class="searchBar"></div>
             <div class="leftSubPannel"></div>
-            <div class="rightSubPannel"></div>
+            <div class="rightSubPannel">
+            </div>
             <div class="bottomSubPannel"></div>
 
         </div>
@@ -29,4 +34,5 @@
     <div id="navbar">
     </div>
 </body>
+
 </html>
